<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>au.com.mineauz</groupId>
        <artifactId>MinigamesProject</artifactId>
        <version>1.21.4-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <artifactId>Minigames</artifactId>
    <packaging>jar</packaging>
    <name>Minigames</name>
    <description>A swiss knife plugin to construct any minigame you can imagine.</description>
    <properties>
        <mysql.user>root</mysql.user>
        <mysql.password>password</mysql.password>
        <mysql.database>test_games</mysql.database>
        <mysql.host>localhost</mysql.host>
        <mysql.port>3306</mysql.port>
        <skipTests>true</skipTests>
    </properties>
    <repositories>
        <!--Paper repo-->
        <repository>
            <name>papermc</name>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!--Bstats-->
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
        <!-- PlaceHolderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!-- Vault -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Used for Economy interop -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>craftbukkit</artifactId>
                </exclusion>
            </exclusions>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.GreenSurvivors</groupId>
            <artifactId>PasteGGAPI</artifactId>
            <version>-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.11.0</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>plugin.yml</include>
                    <include>config.yml</include>
                    <include>*.properties</include>
                    <include>presets/*.yml</include>
                </includes>
            </resource>
            <!-- With maven-resources-plugin(shipped with maven 3.9.0+
            filtering binary / compressed data breaks since it assumes UTF-8.
            We don't need filtering of it anyway.-->
            <resource>
                <targetPath>.</targetPath>
                <filtering>false</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>resourcepack/*.zip</include>
                </includes>
            </resource>
        </resources>

        <sourceDirectory>src/main/java</sourceDirectory>
        <testResources>
            <testResource>
                <filtering>true</filtering>
                <directory>src/test/resources</directory>
                <targetPath>.</targetPath>
                <includes>
                    <include>config.yml</include>
                </includes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <dependencyReducedPomLocation>
                        ${project.build.directory}/dependency-reduced-pom.xml
                    </dependencyReducedPomLocation>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>au.com.mineauz.minigames</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.kitteh.pastegg</pattern>
                            <shadedPattern>au.com.mineauz.minigames.pastegg</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <skipTests>true</skipTests>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.16.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>codecoverage</id>
            <activation>
                <property>
                    <name>env.TRAVIS</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <configuration>
                            <skip>${skipTests}</skip>
                        </configuration>
                        <executions>
                            <execution>
                                <id>jacoco</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.eluder.coveralls</groupId>
                        <artifactId>coveralls-maven-plugin</artifactId>
                        <version>4.3.0</version>
                        <executions>
                            <execution>
                                <id>coveralls</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <skip>${skipTests}</skip>
                            <repoToken>tGd4UFZlq2ltbSDTmfeo7GhG5x0LsHhoG</repoToken>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.gavinmogan</groupId>
                        <artifactId>codacy-maven-plugin</artifactId>
                        <version>1.2.0</version>
                        <configuration>
                            <apiToken>${codacy.api.token}</apiToken>
                            <projectToken>9a3fb2fe5b374cb5ad11e69df7db98fb</projectToken>
                            <coverageReportFile>${project.build.directory}/site/jacoco/jacoco.xml
                            </coverageReportFile>
                            <commit>${travis.commit}</commit>
                            <codacyApiBaseUrl>https://api.codacy.com</codacyApiBaseUrl>
                            <failOnMissingReportFile>false</failOnMissingReportFile>
                        </configuration>
                        <!--Disabled as Codacy parser fails with jococo reports.-->
                        <!--<executions>
                          <execution>
                            <id>upload</id>
                            <phase>verify</phase>
                            <goals>
                              <goal>coverage</goal>
                            </goals>
                          </execution>
                        </executions>-->
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
